fix: adjustments to scripts

--- a/apiproxy/resources/properties/settings.properties
+++ b/apiproxy/resources/properties/settings.properties
@@ -1,3 +1,3 @@
 cloudrun_service_url = https://replace-me.xyz.co
-secretid_sakeyjson = example-sakey-json
+secretid_sakeyjson = sample-sakey-json
 secretversion_sakeyjson = 1
